<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/layout_width"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginTop="@dimen/left_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_id"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_name"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/textViewRole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewName"
                android:text="@string/person_role"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/textViewTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_task"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/textViewDeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_deadline"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/textViewSpendH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spending_hour"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/right_margin_left"
            android:layout_marginTop="@dimen/right_margin_top"
            android:orientation="vertical">


            <ImageButton
                android:id="@+id/img_btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contextClickable="true"
                android:onClick="updateRecord"
                app:srcCompat="@android:drawable/ic_menu_edit" />

            <ImageButton
                android:id="@+id/img_btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contextClickable="true"
                android:onClick="deleteRecord"
                app:srcCompat="@android:drawable/ic_menu_delete" />
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>